made it a warning

--- a/no-framework/todo.html
+++ b/no-framework/todo.html
@@ -176,7 +176,7 @@
                         </a>
                       </article>
 
-                      <article class="message is-primary">
+                      <article class="message is-danger">
                         <div class="message-header">
                           <p>Make a github account</p>
                           <button class="delete" aria-label="delete"></button>
@@ -186,7 +186,7 @@
                           <p>
                             That's where you'll be able to share your work with the world.. thats where we will be putting all of our code for this class.
                           </p>
-                          <progress class="progress is-success" value="60" max="100">60%</progress>
+                          <progress class="progress is-warning" value="60" max="100">60%</progress>
                         </div>
                       </article>
 
