--- a/no-framework/todo.html
+++ b/no-framework/todo.html
@@ -88,8 +88,8 @@
       <div class="section">
           <div class="container">
             <div class="columns">
-                <div class="column is-one-quarter">
-                    <div class="card">
+                <div class="column is-half">
+                    <div class="card is-success">
                         <header class="card-header">
                           <p class="card-header-title">
                             Component
