--- a/no-framework/todo.html
+++ b/no-framework/todo.html
@@ -88,7 +88,7 @@
       <div class="section">
           <div class="container">
             <div class="columns">
-                <div class="column is-half">
+                <div class="column is-2">
                     <div class="card is-success">
                         <header class="card-header">
                           <p class="card-header-title">
@@ -109,9 +109,9 @@
                           </div>
                         </div>
                         <footer class="card-footer">
-                          <a href="#" class="card-footer-item">Save</a>
+                          <a href="#" class="card-footer-item button is-success">Save</a>
                           <a href="#" class="card-footer-item">Edit</a>
-                          <a href="#" class="card-footer-item">Delete</a>
+                          <a href="#" class="card-footer-item button is-danger">Delete</a>
                         </footer>
                       </div>
                 </div>
